[package]
name = "KliverSignatures"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
derive_builder = "0.20"
starknet-signers = "0.14"
starknet-types-core = "0.2.4"
starknet-crypto = "0.8.1"
tower-http = { version = "0.5", features = ["trace"] }
